--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -39,6 +39,7 @@ dependencies:
   mobile_scanner: ^2.0.0
   http: ^0.13.5
   provider: ^6.0.4
+  qr_code_scanner: ^1.0.1
 
 dev_dependencies:
   flutter_test:
