--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -38,7 +38,7 @@ dependencies:
   cupertino_icons: ^1.0.2
   http: ^0.13.5
   provider: ^6.0.4
-  qr_code_scanner: ^1.0.1
+  mobile_scanner: ^2.0.0
 
 dev_dependencies:
   flutter_test:
